[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/Selectors/ConfigValueSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Selectors/ScenarioSelector.gd" type="Script" id=2]

[node name="ScenarioSelector" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 20.0
custom_constants/separation = 5

[node name="DropDown" type="OptionButton" parent="HBoxContainer"]
margin_right = 1001.0
margin_bottom = 20.0
rect_min_size = Vector2( 230, 0 )
size_flags_horizontal = 3

[node name="HelpButton" type="Button" parent="HBoxContainer"]
margin_left = 1006.0
margin_right = 1024.0
margin_bottom = 20.0
text = "?"

[node name="Scenario3" type="VBoxContainer" parent="."]
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 155.0
custom_constants/separation = 10

[node name="Selectors" type="VBoxContainer" parent="Scenario3"]
margin_right = 1024.0
margin_bottom = 95.0
custom_constants/separation = 10

[node name="VisionRadiusValueSelector" parent="Scenario3/Selectors" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 1024.0
label = "Vision Radius Value"
hint = "The vision radius each slime will have."
max_value = 255.0
step = 1.0

[node name="MaxEnergySelector" parent="Scenario3/Selectors" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 35.0
margin_right = 1024.0
margin_bottom = 60.0
label = "Max Energy"
hint = "The maximum amount of energy a slime will have."
min_value = 300.0
max_value = 1000.0
step = 1.0

[node name="EnergyConsumptionModifierSelector" parent="Scenario3/Selectors" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 95.0
label = "Energy Consumption Modifier"
hint = "Controls how much faster a slime with maximum speed will lose energy compared to a slime with the minimum speed."
min_value = 1.0
max_value = 10.0
step = 0.1

[node name="CenterContainer" type="CenterContainer" parent="Scenario3"]
margin_top = 105.0
margin_right = 1024.0
margin_bottom = 125.0

[node name="UpdateButton" type="Button" parent="Scenario3/CenterContainer"]
margin_left = 412.0
margin_right = 612.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )
text = "Apply"

[node name="Scenario1HelpDialog" type="AcceptDialog" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 158.0
window_title = "Scenario 1"
dialog_text = "This is the basic scenario. A slime's speed and vision radius are uncorrelated."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scenario2HelpDialog" type="AcceptDialog" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 209.0
window_title = "Scenario 2"
dialog_text = "In this scenario, a slime's speed is inversely proportional to its vision radius. For example, a speed of 0 will correspond to a vision radius of 255; and a speed of 255 will correspond to a vision radius of 0.

The results of this simulation infere which gene is more benefical to foraging."
dialog_autowrap = true

[node name="Scenario3HelpDialog" type="AcceptDialog" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 226.0
window_title = "Scenario 3"
dialog_text = "In this scenario, all slimes have the same vision radius. Movement will consume energy which can only be replenished by consuming food. The amount of energy lost is  proporitional to the slime's speed. If a slime runs out of energy, it will be removed from the current iteration and will not be able to forage for any more food. Slime's that last longer in the iteration will have a higher chance of being picked for breeding.

The results of this simulation infere an upper limit for a slime's speed where being faster becomes more harmful than benefical."
dialog_autowrap = true
[connection signal="item_selected" from="HBoxContainer/DropDown" to="." method="_on_DropDown_item_selected"]
[connection signal="pressed" from="HBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="value_changed" from="Scenario3/Selectors/MaxEnergySelector" to="." method="_on_MaxEnergySelector_value_changed"]
[connection signal="value_changed" from="Scenario3/Selectors/EnergyConsumptionModifierSelector" to="." method="_on_Scenario3EnergyConsumptionModifierSelector_value_changed"]
[connection signal="pressed" from="Scenario3/CenterContainer/UpdateButton" to="." method="_on_Scenario3UpdateButton_pressed"]
